--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "moment": "^2.24.0",
     "save": "^2.4.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-multiselect": "^2.1.6",
+    "vue-multiselect-listbox": "0.0.18",
+    "vue-router": "^3.1.3",
+    "vue-select": "^3.10.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
