--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "core-js": "^3.4.3",
     "csvtojson": "^2.0.10",
+    "firebase": "^7.14.2",
     "moment": "^2.24.0",
     "save": "^2.4.0",
     "vue": "^2.6.10",
+    "vue-firestore": "^0.3.30",
     "vue-multiselect": "^2.1.6",
     "vue-multiselect-listbox": "0.0.18",
     "vue-router": "^3.1.3",
