--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue-multiselect": "^2.1.6",
     "vue-multiselect-listbox": "0.0.18",
     "vue-router": "^3.1.3",
-    "vue-select": "^3.10.3"
+    "vue-select": "^3.10.3",
+    "vuetify": "^2.2.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -27,9 +28,13 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "material-design-icons-iconfont": "^5.0.1",
     "node-sass": "^4.13.0",
+    "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-cli-plugin-vuetify": "~2.0.5",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
