--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue-multiselect-listbox": "0.0.18",
     "vue-router": "^3.1.6",
     "vue-select": "^3.10.3",
-    "vuetify": "^2.2.11"
+    "vuetify": "^2.2.11",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.1",
