--- a/package.json
+++ b/package.json
@@ -10,33 +10,33 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "csvtojson": "^2.0.10",
-    "firebase": "^7.14.4",
-    "moment": "^2.25.3",
+    "firebase": "^7.15.4",
+    "moment": "^2.27.0",
     "save": "^2.4.0",
     "vue": "^2.6.11",
     "vue-firestore": "^0.3.30",
     "vue-multiselect": "^2.1.6",
     "vue-multiselect-listbox": "0.0.18",
-    "vue-router": "^3.1.6",
+    "vue-router": "^3.3.4",
     "vue-select": "^3.10.3",
-    "vuetify": "^2.2.11",
+    "vuetify": "^2.3.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@mdi/font": "^5.3.45",
-    "@vue/cli-plugin-babel": "^4.3.1",
-    "@vue/cli-plugin-eslint": "^4.3.1",
-    "@vue/cli-service": "^4.3.1",
+    "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-plugin-eslint": "^4.4.6",
+    "@vue/cli-service": "^4.4.6",
     "babel-eslint": "^10.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "material-design-icons-iconfont": "^5.0.1",
     "node-sass": "^4.14.1",
-    "sass": "^1.19.0",
+    "sass": "^1.26.9",
     "sass-loader": "^8.0.2",
-    "vue-cli-plugin-vuetify": "~2.0.5",
+    "vue-cli-plugin-vuetify": "^2.0.6",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
+    "vuetify-loader": "^1.5.0"
   },
   "eslintConfig": {
     "root": true,
